--- a/demo/src/App.css
+++ b/demo/src/App.css
@@ -1,13 +1,25 @@
-@import 'toggle.css';
-
-main {
-  width: min-content;
+.demo {
   margin: auto;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  display: flex;
+  gap: 8rem;
+  flex-direction: row-reverse;
+  justify-content: center;
+}
+
+
+.blob {
+  height: 500px; 
+  width: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .options-grid {
-  margin: auto;
   margin-top: 1rem;
+  margin-bottom: 2rem;
   width: max-content;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -19,39 +31,58 @@ main {
   padding: 1rem;
 }
 
-.slider {
-  -webkit-appearance: none; 
-  appearance: none;
-  width: 100%;
-  height: 1px;
-  background: rgb(136, 136, 136);
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+button {
+  background-color: blue;
+  padding: 1rem;
+  border-radius: 1rem;
+  margin-top: 1rem;
+  color: white;
 }
 
-.slider:hover {
-  opacity: 1;
+.code {
+  width: calc(100% - 20rem);
+  max-width: 40rem;
+  margin: auto !important;
+  max-height: 10rem !important;
+  overflow-x: hidden !important;
 }
 
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 20px;
-  height: 20px;
-  background: blue;
-  border-radius: 50%;
-  cursor: pointer;
+@media (max-width: 1000px) {
+  .demo {
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 0;
+  }
+
+  .blob {
+    margin: auto;
+  }
+
+  .options-grid {
+    margin: auto;
+  }
+
+  .code {
+    width: calc(100% - 10rem);
+  }
 }
 
-.slider::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
-  background: blue;
-  cursor: pointer;
-}
+@media (max-width: 500px) {
+  .demo {
+    margin-bottom: 3rem;
+  }
 
-.code-block {
-  display: none;
+  .options-grid {
+    column-gap: .5rem;
+  }
+
+  .blob {
+    transform: scale(.5);
+    height: 250px;
+    width: 100%;
+  }
+
+  .code {
+    width: calc(100% - 2rem);
+  }
 }
